--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-    
+    <nav>
+
+    </nav>
+    <div class="one"></div>
+     <div class="two"></div>
+     <div class="three"></div>
+     <footer class="four"></footer>
     </body>
 </html>
