--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-    <nav>
-
-    </nav>
-    <div class="one"></div>
-     <div class="two"></div>
-     <div class="three"></div>
-     <footer class="four"></footer>
+        <header class="head">This website is awesome</header>
+        <div class="one"></div>
+        <div class="two"></div>
+        <footer class="foot"></footer>
     </body>
 </html>
