Edited by Srinath

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
     <head>
         <title>Sila</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style.css" type="text/css">
     </head>
-    <body>
-        <header class="head">This website is awesome</header>
-        <div class="one"></div>
-        <div class="two"></div>
+    <body> 
+        <header class="head">
+            <img class="img" src="./images/logo.jpg" width="100px" height="100px">
+        </header>
+        <section class="main">
+            <section class="paper">Section 1</section>
+            <section class="paper">Section 2</section>
+            <section class="paper">Section 3</section>
+        </section>
         <footer class="foot"></footer>
     </body>
 </html>
