--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body> 
         <header class="head">
             <img class="img" src="./images/logo.jpg" width="100px" height="100px">
+            <p class="p1">This is a Awesome Website</p>
         </header>
         <section class="main">
             <section class="paper">Section 1</section>
