--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
             <p class="p1">This is a Awesome Website</p>
         </header>
         <section class="main">
-            <section class="paper">Section 1</section>
+          <!--- <section class="paper">Section 1</section>
             <section class="paper">Section 2</section>
-            <section class="paper">Section 3</section>
+            <section class="paper">Section 3</section> 
+          -->
+          <div class = "two">
+              <div class="b1"></div>
+              <div class="b2"></div>
+              <div class="b3"></div>
+          </div>
         </section>
         <footer class="foot"></footer>
     </body>
