--- a/index.html
+++ b/index.html
@@ -6,20 +6,32 @@
     </head>
     <body> 
         <header class="head">
-            <img class="img" src="./images/logo.jpg" width="100px" height="100px">
-            <p class="p1">This is a Awesome Website</p>
+            <nav>
+                 <ul class = "nav1">
+                     <li><a href="#"> About</a></li>
+                     <li><a href="#">  Contact Us</a></li>
+                     <li><a href="#"> Our Services</a></li>
+                 </ul>
+            </nav>
+            <img class="img" src="./images/logo.jpg" width="150px" height="150px">
+            <p class="p1">Sila Interiors</p>
+            <div class="d3">This a placeholder for an image</div>   
         </header>
         <section class="main">
           <!--- <section class="paper">Section 1</section>
             <section class="paper">Section 2</section>
             <section class="paper">Section 3</section> 
           -->
+
           <div class = "two">
-              <div class="b1"></div>
-              <div class="b2"></div>
-              <div class="b3"></div>
+              <div class="b1"><img src="./images/1.jpeg"width="200px" height="200px"></div>
+              <div class="b2"><img src="./images/2.jpeg"width="200px" height="200px"></div>
+              <div class="b3"><img src="./images/3.jpeg"width="200px" height="200px"></div>
+              <div class="b4"><img src="./images/4.jpeg"width="200px" height="200px"></div>
           </div>
         </section>
-        <footer class="foot"></footer>
+        <footer class="foot">
+           <p>@SilaInteriors</p>
+        </footer>
     </body>
 </html>
